Updated efficiency code to be cleaner

--- a/main_analyses/efficiency.ipynb
+++ b/main_analyses/efficiency.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "4.347510789285019"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,27 +517,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999999999999"
+       "8192.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(pu_m * pm.reshape(-1, 1)).sum()"
+    "beta_schedule[1500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(330, 249)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(qw_m[-i] * pm).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,17 +574,17 @@
     "\n",
     "    print(\"Complexity: \", complexity_split(curr_encoder, true_pm))\n",
     "    print(\"Accuracy: \", accuracy(curr_encoder, true_pm, pu_m))\n",
+    "    print(\"F: \", new_f)\n",
     "\n",
     "    # Create p(x,y)\n",
     "    curr_joint = pu_m * true_pm.reshape(-1, 1)\n",
     "    np.testing.assert_almost_equal(curr_joint.sum(), 1)\n",
     "    curr_pw = np.dot(curr_encoder.T, true_pm).T\n",
-    "    curr_mhat = np.dot(pu_m.T,np.multiply(curr_encoder.T, np.outer(1./curr_pw, pm)).T).T\n",
-    "\n",
+    "    curr_mhat = m_hat(curr_encoder, pm, pu_m)\n",
     "    loops = -1\n",
     "    while np.abs(prev_f - new_f) >= CONV_THRESHOLD:\n",
     "        loops += 1\n",
-    "        if loops >= 30:\n",
+    "        if loops >= 50:\n",
     "            break\n",
     "\n",
     "        # Let's first calculate the new encoder q(w|m)\n",
@@ -572,13 +592,18 @@
     "        for i in range(len(true_pm)): \n",
     "            # for each meaning, we find the KL divergence between the utterances it conveys\n",
     "            # and each of the utterance distributions for each possible word that could be used \n",
-    "            div = DKL(pu_m[i], curr_mhat, axis=1)\n",
-    "            new_encoder_vals.append(div)\n",
-    "        stacked = np.stack(new_encoder_vals)\n",
+    "            # div = DKL(pu_m[i], curr_mhat, axis=1)\n",
+    "            div = np.log(curr_pw)-beta*DKL(pu_m[i, :], curr_mhat, axis=1)\n",
+    "            # new_encoder_vals.append(curr_pw * np.exp(-beta*div))\n",
+    "            div = (div - logsumexp(div)).reshape(-1)\n",
+    "            # print(div.shape)\n",
+    "            new_encoder_vals.append(np.exp(div))\n",
+    "        unnorm_encoder = np.stack(new_encoder_vals)\n",
+    "        # print(stacked.shape)\n",
     "        # Perform softmax as per the equation\n",
-    "        softmaxed = softmax(stacked, beta=beta, axis=1)\n",
+    "        # unnorm_encoder = softmax(stacked, beta=beta, axis=1)\n",
     "        # Weight by the pw vector\n",
-    "        unnorm_encoder = curr_pw*softmaxed\n",
+    "        # unnorm_encoder = curr_pw*softmaxed\n",
     "        new_encoder = (unnorm_encoder/unnorm_encoder.sum(axis=1).reshape(-1, 1))\n",
     "        assert new_encoder.shape == curr_encoder.shape\n",
     "\n",
@@ -596,8 +621,8 @@
     "            new_encoder = (new_encoder/new_encoder.sum(axis=1).reshape(-1, 1))#np.multiply(qw_m,np.tile(1./np.sum(self.qt_x,axis=0),(self.T,1))) # renormalize\n",
     "        new_pw = np.dot(new_encoder.T, true_pm).T\n",
     "        \n",
-    "        # new_mhat = m_hat(new_encoder, true_pm, pu_m)\n",
-    "        new_mhat = np.dot(pu_m.T,np.multiply(new_encoder.T, np.outer(1./new_pw,pm)).T).T\n",
+    "        new_mhat = m_hat(new_encoder, true_pm, pu_m)\n",
+    "        # new_mhat = np.dot(pu_m.T,np.multiply(new_encoder.T, np.outer(1./new_pw,pm)).T).T\n",
     "\n",
     "        curr_encoder = new_encoder\n",
     "        curr_pw = new_pw\n",
@@ -613,68 +638,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(249,)"
+       "(330, 247)"
       ]
      },
-     "execution_count": 711,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aw = (new_da*pm).sum(axis=0)\n",
-    "aw[~(aw<1e-5)].shape"
+    "qw_m[-i-1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "249"
-      ]
-     },
-     "execution_count": 712,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(margins(qw_m[-i] * pm)[1] > 1e-8).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 713,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.484969178286752"
-      ]
-     },
-     "execution_count": 713,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "beta_schedule[-i-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -683,97 +667,55 @@
      "text": [
       "Complexity:  6.375372675031595\n",
       "Accuracy:  4.347510789285019\n",
+      "F:  -62.36297979708743\n",
       "DROPPING\n",
       "NEW STATS\n",
       "6.44383025313947\n",
       "4.35136643521674\n",
       "NEW STATS\n",
       "6.463379303967323\n",
-      "4.352367894150198\n",
+      "4.3523678941502\n",
       "NEW STATS\n",
       "6.472182615607636\n",
       "4.352801695653989\n",
       "NEW STATS\n",
-      "6.476486085626137\n",
-      "4.353009101507711\n",
+      "6.476486085626135\n",
+      "4.353009101507713\n",
       "NEW STATS\n",
       "6.4787360297659085\n",
-      "4.353116624650678\n",
+      "4.35311662465068\n",
       "NEW STATS\n",
-      "6.480001101075304\n",
-      "4.353176606961883\n",
+      "6.480001101075306\n",
+      "4.353176606961885\n",
       "NEW STATS\n",
       "6.480752578199157\n",
-      "4.353211861965077\n",
+      "4.353211861965075\n",
       "NEW STATS\n",
-      "6.481216081880633\n",
+      "6.481216081880629\n",
       "4.353233368392557\n",
       "NEW STATS\n",
-      "6.481511031612458\n",
-      "4.353246930135024\n",
+      "6.481511031612455\n",
+      "4.353246930135022\n",
       "NEW STATS\n",
-      "6.481704909366566\n",
-      "4.353255787401286\n",
+      "6.4817049093665675\n",
+      "4.353255787401288\n",
       "NEW STATS\n",
-      "6.481836896651556\n",
-      "4.353261791691265\n",
-      "NEW STATS\n",
-      "6.481930014589856\n",
-      "4.353266016200692\n",
-      "NEW STATS\n",
-      "6.481997977151106\n",
-      "4.353269094388676\n",
-      "NEW STATS\n",
-      "6.482049129316122\n",
-      "4.353271409580563\n",
-      "NEW STATS\n",
-      "6.4820886937713915\n",
-      "4.353273200883393\n",
-      "NEW STATS\n",
-      "6.482120047195919\n",
-      "4.353274622539166\n",
-      "NEW STATS\n",
-      "6.482145449015499\n",
-      "4.353275777561329\n",
-      "NEW STATS\n",
-      "6.482166463303739\n",
-      "4.353276737141119\n",
-      "NEW STATS\n",
-      "6.482184208158434\n",
-      "4.353277552105789\n",
-      "NEW STATS\n",
-      "6.482199507025046\n",
-      "4.353278259871576\n",
-      "NEW STATS\n",
-      "6.482212983364956\n",
-      "4.353278888794753\n",
-      "NEW STATS\n",
-      "6.482225121890186\n",
-      "4.353279460986315\n",
-      "NEW STATS\n",
-      "6.482236309568272\n",
-      "4.353279994196527\n",
-      "NEW STATS\n",
-      "6.482246864029768\n",
-      "4.353280503120056\n",
-      "NEW STATS\n",
-      "6.482257053866004\n",
-      "4.353281000328106\n",
-      "NEW STATS\n",
-      "6.482267113485553\n",
-      "4.353281496949901\n",
-      "NEW STATS\n",
-      "6.482277254099853\n",
-      "4.353282003174424\n",
-      "NEW STATS\n",
-      "6.48228767169098\n",
-      "4.353282528609226\n",
-      "NEW STATS\n",
-      "6.482298552279746\n",
-      "4.353283082506078\n",
-      "NEW STATS\n",
-      "6.482310074340009\n",
-      "4.3532836738391705\n"
+      "6.481836896651557\n",
+      "4.3532617916912635\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1252/4131708056.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m301\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# old_da = deterministic_annealing(pm, pu_m, qw_m[-i], beta_schedule[-i])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnew_da\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpu_m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqw_m\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta_schedule\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_1252/113702169.py\u001b[0m in \u001b[0;36mda\u001b[0;34m(true_pm, pu_m, qw_m, beta, ptol)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0;31m# and each of the utterance distributions for each possible word that could be used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0;31m# div = DKL(pu_m[i], curr_mhat, axis=1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0mdiv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurr_pw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mDKL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpu_m\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurr_mhat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m             \u001b[0;31m# new_encoder_vals.append(curr_pw * np.exp(-beta*div))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mdiv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdiv\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlogsumexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_1252/768755777.py\u001b[0m in \u001b[0;36mDKL\u001b[0;34m(p, q, axis)\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mDKL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0;34m\"\"\" KL divergences, D[p||q] \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mxlogx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mPRECISION\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mPRECISION\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgNID\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpW_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpV_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/venv37/lib/python3.7/site-packages/numpy/core/_methods.py\u001b[0m in \u001b[0;36m_sum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m     45\u001b[0m def _sum(a, axis=None, dtype=None, out=None, keepdims=False,\n\u001b[1;32m     46\u001b[0m          initial=_NoValue, where=True):\n\u001b[0;32m---> 47\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mumr_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minitial\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhere\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m def _prod(a, axis=None, dtype=None, out=None, keepdims=False,\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
